# exstats

./: .gitignore  README.md  exstats  setup.py
exstats/: app
libexstats/: __init__.py
src/: Pipfile  pyproject.toml  requirements.txt  setup.py
src/exstats/: __init__.py  __main__.py  app.py
src/tests/: test_app.py
src/tests/data/a/: a.txt  b.txt
src/tests/data/c/b/: a.txt
