[tool.poetry]
name = "exstats"
version = "1.0.0"
description = "Scipts to computes disk usage satistics by file extension"
authors = ["François Trahan <francois.trahan@gmail.com>"]

license = "GPL-3.0"

homepage = "https://github.com/francoistrahan/exstats"
repository = "https://github.com/francoistrahan/exstats.git"

[tool.poetry.scripts]
exstats = "exstats.__main__:main"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pytest-datadir = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
